# ska-mid-dish-qualification

./: .flake8  .gitignore  .gitlab-ci.yml  .pylintrc  .readthedocs.yaml  CHANGELOG  CHANGELOG.md  CODEOWNERS  LICENSE  Makefile  README.md  disq.ini  disq.spec  log.ps1  pyproject.toml  pyproject_for_poetry.toml  pyproject_for_setup.toml  use_poetry.sh  use_setup.sh
.devcontainer/: Dockerfile  devcontainer.json
SKAMPI/Example_DS_Qualification_Scripts/: 6_12(ww).ipynb  6_13_2(ww)_f.ipynb
SKAMPI/Example_DS_Qualification_Scripts/Libraries/: cam_sensors.py  sculib.py
docs/: DiSQ_component_view.drawio
docs/src/: conf.py  index.rst
docs/src/api/: configuration.rst  data-logger.rst  index.rst  logger.rst  sculib.rst  server-validator.rst  server_validator.rst
docs/src/how-to/: connecting.rst  using-the-gui.rst
docs/src/how-to/gui/: authority.rst  index.rst  launch-and-connect.rst  pointing-correction.rst  slewing.rst  weather-station.rst
docs/src/img/: .$DiSQ_component_view.drawio.bkp  DiSQ_component_view.drawio
examples/: example-dotenv  example_grapher.ipynb  importsculib.py  simpleasyncqt.py  simplethreadedqt.py
examples/input_files/: 2023-10-13_16-48-37.hdf5
macos_dist/: build_distributable.sh  upload_dist_to_registry.sh
macos_installer/: build_distributable.sh  upload_installer_to_registry.sh
notebooks/: 6_12(ww).ipynb  6_13_2(ww)_f.ipynb  6_8_8(hn)_aa.ipynb  DiSQ demo 22.4.ipynb  example_grapher.ipynb  example_logger_sculib_reader.ipynb
resources/: ds_icd_0.0.11.xml  ds_icd_0.0.11_mock.xml  ds_icd_0.0.5.xml  old_sculib_methods.py
scripts/: hdf5_to_graph.py  importsculib.py
src/disq/: 2sandbox.py  __init__.py  __main__.py  cam_sensors.py  configuration.py  constants.py  controller.py  data_logger.py  default_logging_config.yaml  example_logger_sculib_reader.ipynb  hdf5_to_csv.py  hdf5_to_graph.py  logger.py  model.py  mvcmain.py  reader.py  scu_generators.py  sculib.py  serval_internal_server.py  server_validator.py  track_table.py  view.py
src/disq/ui/: dishstructure_mvc.ui
src/ska_mid_dish_qualification/: __init__.py  configuration.py  controller.py  default_logging_config.yaml  hdf5_to_csv.py  hdf5_to_graph.py  logger.py  model.py  mvcmain.py  reader.py  sculib.py  serval_internal_server.py  server_validator.py  view.py
src/ska_mid_dish_qualification/ui/: dishstructure_mvc.ui
src/ska_mid_disq/: __init__.py  attribute_window.py  configuration.py  constants.py  controller.py  data_logger.py  gui_main.py  hdf5_to_csv.py  hdf5_to_graph.py  logger.py  model.py  mvcmain.py  scu_generators.py  scu_weather_station.py  server_validator.py  ui_resources.py  view.py
src/ska_mid_disq/model/: __init__.py  data_logger.py  model.py  scu_weather_station.py
src/ska_mid_disq/server_validator/: __init__.py  server_validator.py
src/ska_mid_disq/ui/: dishstructure_mvc.ui  resources.qrc
src/ska_mid_disq/ui_resources/: main_window.ui  ui_resources.py
src/ska_mid_disq/utils/: __init__.py  configuration.py  environment.py  hdf5_to_csv.py  scu_generators.py
src/ska_mid_disq/view/: __init__.py  attribute_window.py  command_window.py  controller.py  custom_widgets.py  dialogs.py  view.py
src/ska_mid_disq/weather_station_resources/: weather_station.yaml  weather_station_configs.json
tests/: __init__.py  config.yaml  config_cetc.yaml  conftest.py  ds_icd_0.0.4.xml  ds_icd_0.0.4_mock.xml  ds_icd_0_0_5.xml  hdf5_maker.py  queue_from_hdf5.py  test_commands.py  test_configuration.py  test_data_logger.py  test_disq_mvc.py  test_hdf5_to_csv.py  test_logger.py  test_view_slots.py  timestamp_reader.py
tests/expected_files/: node_not_in_file.csv  simple_input_file.csv  simple_input_file_double_speed.csv  start_stop_past_files.csv
tests/input_files/: no_matching_nodes.hdf5  node_not_in_file.hdf5  simple_input_file.hdf5  simple_input_file_double_speed.hdf5  start_stop_past_file.hdf5
tests/output_files/: simple_input_file.csv
tests/resources/: Dockerfile  ds_opcua_server_mock.py  hdf5_maker.py
tests/resources/expected_files/: node_not_in_file.csv  simple_input_file.csv  simple_input_file_double_speed.csv  start_stop_past_files.csv
tests/resources/input_files/: _log.hdf5  no_matching_nodes.hdf5  node_not_in_file.hdf5  simple_input_file.hdf5  simple_input_file_double_speed.hdf5  start_stop_past_file.hdf5
tools/: html_node_tree_viewer.py
tools/server_validator/: server_validator.py
windows_installer/: README.md  build_and_generate_ifp_config.ps1  disq.ifp  post_install.bat  post_install.ps1  upload_installer_to_registry.ps1
