[tool.poetry]
include = ["MANIFEST.skao.int"]
name = "ska-mid-disq"
version = "0.5.1"
description = "SKA-Mid Dish Structure Qualification (DiSQ) software"
authors = [
    "Oliver Skivington <oliver.skivington@criticalsoftware.com>",
    "Thomas Juerges <thomas.juerges@skao.int>",
    "Ulrik Pedersen <ukp@observatorysciences.co.uk>",
    "Jarrett Engelbrecht <jarrett@vivosa.co.za>",
]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://gitlab.com/ska-telescope/ska-mid-disq"
documentation = "https://developer.skatelescope.org/projects/ska-mid-disq"

[tool.poetry.scripts]
disq-gui = "ska_mid_disq.mvcmain:main"
disq-validate-server = "ska_mid_disq.server_validator:main"

[[tool.poetry.source]]
name = "ska"
url = "https://artefact.skao.int/repository/pypi-all/simple"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
asyncua = "^1.1.5"
PyQt6 = "^6.4.2"
pyqt6-tools = "^6.4.2"
matplotlib = "^3.9.2"
pyyaml = "^6.0.2"
h5py = "^3.12.1"
numpy = "^2.1.2"
platformdirs = "^4.2.6"
ska-mid-dish-steering-control = "^0.1.1"
# ska-mid-dish-steering-control = { path = "../ska-mid-dish-steering-control", develop = true }
# ska-mid-dish-steering-control = { git = "https://gitlab.com/ska-telescope/ska-mid-dish-steering-control.git", branch = "main" }

[tool.poetry.group.dev.dependencies]
pyqt6-tools = "^6.4.2"
pytest = "^8.1.1"
pytest-qt = "^4.4.0"
pytest-cov = "^4.0.0"
assertpy = "^1.1"
isort = "^5.13.2"
black = "^24.2.0"
pylint = "^3.2.4"
pylint-junit = "^0.3.2"
flake8 = "^7.0.0"
flake8-formatter-junit-xml = "^0.0.6"
flake8-builtins = "^2.1.0"
flake8-docstrings = "^1.7.0"
flake8-use-fstring = "^1.4"
flake8-rst-docstrings = "^0.3.0"
mypy = "^1.9.0"
pep8-naming = "^0.13.3"
build = "^1.1.1"
nbqa = "^1.8.4"

[tool.poetry.group.docs.dependencies]
Sphinx = "^7.2.6"
sphinx-autodoc-typehints = "^2.0.0"
ska-ser-sphinx-theme = "^0.1.2"
sphinx-argparse = "^0.4.0"
sphinxcontrib-mermaid = "^0.9.2"
recommonmark = "^0.7.1"

[tool.mypy]
ignore_missing_imports = true        # Ignore missing stubs in imported modules
strict_optional = false              # TODO: Remove, see https://mypy.readthedocs.io/en/stable/config_file.html#none-and-optional-handling
disallow_incomplete_defs = true
disable_error_code = "call-overload"

[tool.isort]
profile = "black"

[tool.black] # See https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-format
line-length = 88

[tool.pytest.ini_options]
# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
addopts = """
    --tb=native -v --doctest-modules --doctest-glob="*.rst"
    """
# https://iscinumpy.gitlab.io/post/bound-version-constraints/#watch-for-warnings
filterwarnings = "error"
# Doctest python code in docs, python code in src docstrings, test functions in tests
testpaths = "docs src tests"
qt_api = "pyqt6"

[tool.coverage.run]
omit = ["__init__.py"]

[tool.coverage.paths]
# Tests are run from installed location, map back to the src directory
source = ["src", "**/site-packages/"]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
